--- a/php/content/pools/configurator/index.phtml
+++ b/php/content/pools/configurator/index.phtml
@@ -64,7 +64,7 @@ foreach($modelsArr as $category){
         </script>
         <div class="configurator__options">
             <div class="configurator__option configurator__option--active">
-                <h6 class="configurator__option-header">Модель</h6> 
+                <h6 class="configurator__option-header">Моделька</h6> 
                 <div class="pool_window">
                     
                 </div>
