--- a/src/assets/css/blocks/sections/product.scss
+++ b/src/assets/css/blocks/sections/product.scss
@@ -551,3 +551,12 @@
         }
     }
 }
+
+#product-attribute-specs-table {
+    tr {
+        vertical-align: baseline;
+    }
+    th.label {
+        color: #000;
+    }
+}
