--- a/php/catalog/category/filters/field/checkbox.phtml
+++ b/php/catalog/category/filters/field/checkbox.phtml
@@ -24,6 +24,7 @@ if(count($optionList) <= 1) return false;;
 	<svg class="select__arrow" width="6" height="4" viewBox="0 0 6 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<path d="M2.86243 4L0.643236 0.25L5.08162 0.25L2.86243 4Z"></path>
 	</svg>
+	<img src="dist/assets/images/clear_cross.svg" alt="" class="clear_filters">
 	<div class="select__variants">
 		<div class="check_container">
 			<?php foreach ($optionList as $index => $option) : ?>
