--- a/php/content/pools/configurator/index.phtml
+++ b/php/content/pools/configurator/index.phtml
@@ -115,7 +115,7 @@ foreach($modelsArr as $category){
                         <div><span>Система самоочистки</span></div>
                         <div><span>+140 000 ₽</span></div>
                     </div> -->
-                    <div class="configurator__option-window">
+                    <div class="configurator__option-window" data-window_id="129383">
                         <div class="info_icon-container">
                             <svg class="info_icon" width="19" height="19" viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="9.29319" cy="9.29319" r="8.79319" fill="white" />
@@ -128,6 +128,7 @@ foreach($modelsArr as $category){
                         <img src="dist/assets/images/configurator/option_2.png" alt="">
                         <div><span>Самонесущая конструкция</span></div>
                         <div><span class="option_price series__modelPrice"></span></div>
+                        <div class="window_icon"><img src="dist/assets/images/configurator/icons/choose.svg" style="width: 360px;max-width: 360px;height: 100%;" alt=""></div>
                     </div>
                     <div class="configurator__option-window">
                         <div class="info_icon-container">
@@ -163,7 +164,7 @@ foreach($modelsArr as $category){
             <div class="configurator__equipment-grid">
                 <?php foreach($json[121199]['groups'] as $key=>$group): ?>
                     <?php if ($key === array_key_last($json[121199]['groups'])) $group['custom_class'] = 'right_hint'; else $group['custom_class'] = '';?>
-                    <?=$this->render([$key,$group, $icon = "change"],'content/pools/configurator/option_window')?>
+                    <?=$this->render([$key,$group, $icon = "choose"],'content/pools/configurator/option_window')?>
 
                 <?php endforeach; ?>
             </div>
@@ -182,7 +183,7 @@ foreach($modelsArr as $category){
             <div class="configurator__equipment-grid">
                 <?php foreach($json[121201]['groups'] as $key=>$group): ?>
                     <?php if ($key === array_key_last($json[121200]['groups'])) $group['custom_class'] = 'right_hint'; else $group['custom_class'] = '';?>
-                    <?=$this->render([$key,$group, $icon = "change"],'content/pools/configurator/option_window')?>
+                    <?=$this->render([$key,$group, $icon = "choose"],'content/pools/configurator/option_window')?>
                 <?php endforeach; ?>
             </div>
         </div>
@@ -191,7 +192,7 @@ foreach($modelsArr as $category){
             <div class="configurator__equipment-grid">
                 <?php foreach($json[121202]['groups'] as $key=>$group): ?>
                     <?php if ($key === array_key_last($json[121202]['groups'])) $group['custom_class'] = 'right_hint'; else $group['custom_class'] = '';?>
-                    <?=$this->render([$key,$group, $icon = "change"],'content/pools/configurator/option_window')?>
+                    <?=$this->render([$key,$group, $icon = "choose"],'content/pools/configurator/option_window')?>
                 <?php endforeach; ?> 
             </div>
         </div>
@@ -200,7 +201,7 @@ foreach($modelsArr as $category){
             <div class="configurator__equipment-grid">
                 <?php foreach($json[121205]['groups'] as $key=>$group): ?>
                     <?php if ($key === array_key_last($json[121205]['groups'])) $group['custom_class'] = 'right_hint'; else $group['custom_class'] = '';?>
-                    <?=$this->render([$key,$group, $icon = "change"],'content/pools/configurator/option_window')?>
+                    <?=$this->render([$key,$group, $icon = "choose"],'content/pools/configurator/option_window')?>
                 <?php endforeach; ?>
             </div>
         </div>
