--- a/php/content/pools/configurator/option_window.phtml
+++ b/php/content/pools/configurator/option_window.phtml
@@ -2,8 +2,13 @@
 $id = $variables[0];
 $group = $variables[1];
 $icon = $variables[2];
+
+$svg = file_get_contents('.'.$group['icon']);
 ?>
-<div class="configurator__option-window" data-window_id="<?=$id?>"> 
+<div class="configurator__option-window" data-window_id="<?=$id?>">
+    <div class="clear_icon-container">
+        <img class="clear_icon" src="dist/assets/images/configurator/icons/clear_cross.svg"></img>
+    </div>
     <div class="info_icon-container">
         <svg class="info_icon" width="19" height="19" viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg">
             <circle cx="9.29319" cy="9.29319" r="8.79319" fill="white" />
@@ -13,7 +18,7 @@ $icon = $variables[2];
     <div class="window_info <?=$group['custom_class']?>">
         <p><?=$group['hint']?></p>
     </div>
-    <img src="<?=$group['icon']?>" alt="">
+    <?=$svg?>
     <div><span><?=$group['name']?></span></div>
     <div class="window_icon"><img src="dist/assets/images/configurator/icons/<?=$icon?>.svg" style="width: 289px;max-width: 289px;height: 100%;" alt=""></div>
 </div> 
