--- a/php/catalog/product/preview/index.phtml
+++ b/php/catalog/product/preview/index.phtml
@@ -51,6 +51,11 @@ $ids = json_decode($this->getCookie('favorites'));
 			<path d="M15 17C15 18.1028 15.8972 19 17 19C18.1028 19 19 18.1028 19 17C19 15.8972 18.1028 15 17 15C15.8972 15 15 15.8972 15 17ZM17 16.3333C17.3675 16.3333 17.6667 16.6325 17.6667 17C17.6667 17.3675 17.3675 17.6667 17 17.6667C16.6325 17.6667 16.3333 17.3675 16.3333 17C16.3333 16.6325 16.6325 16.3333 17 16.3333Z"></path>
 			</svg><span>В корзину</span>
 		</a>
+		<div class="qnt_input">
+			<button class="qnt_input-field">-</button>
+			<input class="qnt_input-field" value="1">
+			<button class="qnt_input-field">+</button>
+		</div>
 		</div>
 		<div class="card__plus">  
 		<svg width="13" height="14" viewBox="0 0 13 14" fill="none" xmlns="http://www.w3.org/2000/svg">
