--- a/src/assets/css/blocks/card.scss
+++ b/src/assets/css/blocks/card.scss
@@ -53,7 +53,6 @@
         color: #000000;
         font-weight: bold;
         font-size: 1.8rem;
-        font-family: Geometria;
         line-height: 23/18*1;
         position: relative;
         text-align: left;
@@ -165,7 +164,6 @@
         font-size: 1.1rem;
         line-height: 142.3%;
         color: #8F8F8F;
-        font-family: Geometria;
         text-align: left;
 
         span {
@@ -175,7 +173,6 @@
     }
 
     &__filter {
-        font-family: Geometria;
         font-style: normal;
         font-weight: bold;
         font-size: 1rem;
@@ -195,6 +192,29 @@
         &--bg {
             background: #5282E1;
             left: 5.4rem;
+        }
+    }
+
+    .qnt_input {
+        display: none;
+        border: 1px solid #e5e5e5;
+        border-radius: 3px;
+        width: 120px;
+        height: 30px;
+        .qnt_input-field {
+            color: black;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 0;
+            height: 100%;
+            width: 33.3%;
+            background: none;
+            border: none;
+            text-align: center;
+        }
+        button.qnt_input-field:hover {
+            background-color: #4081FF;
+            color: white;
         }
     }
 }
