--- a/src/assets/css/blocks/configurator.scss
+++ b/src/assets/css/blocks/configurator.scss
@@ -115,6 +115,19 @@
         img {
           margin-bottom: 1rem;
         }
+        .clear_icon-container {
+          position: absolute;
+          width: 22px;
+          height: 22px;
+          top: 5px;
+          left: 5px;
+          display: none;
+          z-index: 1;
+          .clear_icon {
+            width: 100%;
+            height: 100%;
+          }
+        }
       }
     }
   }
