--- a/src/assets/css/blocks/basket.scss
+++ b/src/assets/css/blocks/basket.scss
@@ -679,3 +679,11 @@
 .contacts__map {
   width: 100%;
 }
+
+.cart__hide-list {
+  margin-bottom: 10px;
+}
+
+.order .order-2 {
+  padding: 0 15px 25px 15px;
+}
