--- a/src/assets/css/blocks/sidebar.scss
+++ b/src/assets/css/blocks/sidebar.scss
@@ -159,7 +159,7 @@
         max-height: 100%;
         top: 54px;
         position: fixed;
-        left: 280px;
+        left: 28rem;
         
         .mobile-menu &{
             top:5rem;
