--- a/php/emarket/cart/product/index.phtml
+++ b/php/emarket/cart/product/index.phtml
@@ -32,5 +32,10 @@ $product = $variables;
             <img src="resources/img/add.svg" class="increment_product_quantity svg cart-counter-icon">
         </span>
     </div>
+    <div class="cart__list__delete">
+        <a class="order_delete" href="#" data-id="<?=$product['id']?>">
+        <svg width="15px", height="15px" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 64 64"><line x1="9.37" x2="54.63" y1="9.37" y2="54.63" fill="none" stroke="#010101" stroke-miterlimit="10" stroke-width="4"/><line x1="9.37" x2="54.63" y1="54.63" y2="9.37" fill="none" stroke="#010101" stroke-miterlimit="10" stroke-width="4"/></svg>
+        </a>
+    </div>
 </div>
 <?= $this->render($product['page'], 'emarket/cart/product/suggested_product_list') ?>
