--- a/php/emarket/purchasing_one_step/cart.phtml
+++ b/php/emarket/purchasing_one_step/cart.phtml
@@ -12,7 +12,7 @@ $cart['drawFormButton'] = true;
 
 <div class="cart onestep">
 	<div data-full-cartlist="hide" class="cart__hide-list d-sm-none hidden_tablet">
-		<a href="javascript:;" class="cart__show-list-trigger">
+		<a href="javascript:;" class="cart__hide-list-trigger">
 			Скрыть детали заказа
 			<img src="/templates/axlab_2018/images/icons/small-blue-chevron.svg" alt="">
 		</a>
