--- a/php/catalog/product/preview/index.phtml
+++ b/php/catalog/product/preview/index.phtml
@@ -51,11 +51,17 @@ $ids = json_decode($this->getCookie('favorites'));
 			<path d="M15 17C15 18.1028 15.8972 19 17 19C18.1028 19 19 18.1028 19 17C19 15.8972 18.1028 15 17 15C15.8972 15 15 15.8972 15 17ZM17 16.3333C17.3675 16.3333 17.6667 16.6325 17.6667 17C17.6667 17.3675 17.3675 17.6667 17 17.6667C16.6325 17.6667 16.3333 17.3675 16.3333 17C16.3333 16.6325 16.6325 16.3333 17 16.3333Z"></path>
 			</svg><span>В корзину</span>
 		</a>
-		<div class="qnt_input">
-			<button class="qnt_input-field"><img src="dist/assets/images/minus-sign.svg" alt="" width="15px" height="15px"></button>
-			<input class="qnt_input-field" value="1">
-			<button class="qnt_input-field"><img src="dist/assets/images/plus-sign.svg" alt="" width="15px" height="15px"></button>
-		</div>
+		<div class="product__quantity">
+            <div class="quantity"><span class="quantity__down">
+                <svg width="12" height="2" viewBox="0 0 12 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.503418 1.33307H11.498C11.7742 1.33307 11.998 1.10921 11.998 0.833069C11.998 0.556927 11.7742 0.333069 11.498 0.333069H0.503418C0.227276 0.333069 0.00341797 0.556927 0.00341797 0.833069C0.00341797 1.10921 0.227276 1.33307 0.503418 1.33307Z"></path>
+                </svg></span>
+              <input type="text" value="1"><span class="quantity__up">
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.83323 2C8.08636 2 8.29559 2.18801 8.32875 2.43205L8.33333 2.4999L8.33413 7.33333H13.1695C13.4457 7.33333 13.6695 7.55719 13.6695 7.83333C13.6695 8.08646 13.4814 8.29566 13.2374 8.32877L13.1695 8.33333H8.33413L8.33549 13.1661C8.33555 13.4422 8.11174 13.6662 7.8356 13.6662C7.58247 13.6662 7.37323 13.4782 7.34007 13.2341L7.33549 13.1663L7.33413 8.33333H2.50146C2.22532 8.33333 2.00146 8.10948 2.00146 7.83333C2.00146 7.5802 2.18957 7.37101 2.43362 7.3379L2.50146 7.33333H7.33413L7.33333 2.5001C7.33327 2.22396 7.55708 2 7.83323 2Z"></path>
+                </svg></span>
+            </div> 
+        </div>
 		</div>
 		<div class="card__plus" data-element_id="<?= $product->getId() ?>">
 		<svg width="13" height="14" viewBox="0 0 13 14" fill="none" xmlns="http://www.w3.org/2000/svg">
