--- a/php/emarket/purchasing_one_step.phtml
+++ b/php/emarket/purchasing_one_step.phtml
@@ -26,6 +26,7 @@ $cart = $this->macros('emarket', 'cart');
 <div class="center-wrap" style="padding-top: 2.1rem;">
     <div class="page__content page__content_mob-bgc_white">
         <div class="order">
+            <a href="javascript:;" class="cart__show-list-trigger">Показать детали заказа</a>
             <div data-full-cartlist="container" class="cart__show-list hidden_tablet" style="display:none;">
                 <img src="/templates/axlab_2018/images/icons/blue-cart.svg" alt="" class="cart__blue-cart">
                 <a href="javascript:;" data-full-cartlist="trigger" class="cart__show-list-trigger">
