--- a/src/assets/css/blocks/card.scss
+++ b/src/assets/css/blocks/card.scss
@@ -195,26 +195,24 @@
         }
     }
 
-    .qnt_input {
-        display: none;
-        border: 1px solid #e5e5e5;
-        border-radius: 3px;
-        width: 120px;
-        height: 30px;
-        .qnt_input-field {
-            color: black;
-            font-size: 18px;
-            font-weight: bold;
-            padding: 0;
-            height: 100%;
-            width: 33.3%;
-            background: none;
-            border: none;
-            text-align: center;
+    .product__quantity {
+        height: 31px;
+        input {
+            line-height: 3rem;
         }
-        button.qnt_input-field:hover {
-            background-color: #4081FF;
-            color: white;
-        }
+    }
+}
+
+.card__plus--active {
+    svg {
+        fill: #4081FF;
+    }
+}
+
+.product__quantity {
+    height: 41px;
+    display: none;
+    span {
+        height: 100%;
     }
 }
