--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -161,7 +161,7 @@ h5{
 		&.hidden {
 			opacity: 0;
 		}
-		@media screen and (max-width: $small_desktop) {
+		@media screen and (max-width: $large_tablet) {
 			display: none;
 		}
 	}
